[package]
name = "vibrant"
version = "0.1.0"
authors = ["Pascal Hertleif <killercup@gmail.com>"]
repository = "https://github.com/killercup/vibrant-rs.git"
homepage = "https://github.com/killercup/vibrant-rs.git"
license = "MIT"
readme = "README.md"
documentation = "http://killercup.github.io/vibrant-rs/"

[features]
default = []
dev = ["clippy"]

[dependencies]
image = "0.3.12"
color_quant = "1.0"
itertools = "0.3"
clippy = { git = "https://github.com/Manishearth/rust-clippy.git", optional = true }
hsl = "0.1"
